Implement categorical and numerical view

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -18,7 +18,7 @@ server {
     # an index of the applications available in this directory will be shown.
     directory_index on;
   }
-  location /transfer/categorical/ {
+  location /categorical/ {
     # Host the directory of Shiny Apps stored in this directory
     site_dir /srv/transfer.server/R/categorical/;
 
